# code

./: .gitattributes  .gitignore  Git提交脚本使用说明.md  PROJECT_OVERVIEW.md  README.md  git_commit.bat  git_commit.cmd  git_commit.ps1  git_commit_README.md  git_commit_all.bat  git_commit_all.ps1  git_commit_all_en.bat  git_commit_all_fixed.bat  git_commit_large_files.ps1  git_commit_simple.ps1  requirements.txt  ssh_git_commit.bat  ssh_git_commit.ps1  一键提交所有文件.bat  一键提交所有文件.ps1  一键提交脚本使用说明.md
.trae/documents/: 编写一键git提交cmd脚本.md
crawler/: main.py  绕过客户端检测.py
crawler/7811游戏交易网-发送数据为json-简单请求头加密/: Readme.md  main.py  test.js
crawler/DrissionPage/: data.xlsx  京东数据爬取.py  关键词.txt  小红书.py  小红书数据爬取.py  快速入门.py  拉勾网数据爬取.py
crawler/crawl4AI/: test_crawl4ai.py  基础教程.md
crawler/crawl4AI/crawl4-mcp-master/: .env.sample  .gitignore  README.md  first_crawl_demo.py  pyproject.toml
crawler/crawl4AI/crawl4-mcp-master/app/: crawl4_mcp.py
crawler/crawl4AI/crawl4-mcp-master/app/core/: __init__.py  config.py  db.py  log_adapter.py
crawler/crawl4AI/crawl4-mcp-master/app/test/: mock_test.py  test_connection.py  test_crawl_page.py
crawler/crawl4AI/crawl4-mcp-master/app/utils/: __init__.py  crawl_util.py  file_util.py  rag_util.py
crawler/优志愿-webpack逆向/: Redme.md  mian.py  webpack.js
crawler/常用的Python代码/: 传参是json的时候.py  调用js.py
crawler/数据加密/: redme.md
crawler/数据加密/加密货币信息获取/: 加密货币信息爬取.py
crawler/爬虫基础/: css选择器.py
crawler/猫眼电影实时票房-字体加密/: README.md  demo.py  demo1.py  main.py  redme.md  test_ocr.py
test/: README.md  crawl4ai_example.py  example_result.md  python_org_result.md
(+233 files in other folders)
