[project]
name = "crawl4-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "fastmcp>=2.5.2",
    "langchain-text-splitters>=0.3.8",
    "openai>=1.82.1",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "structlog>=25.3.0",
    "supabase>=2.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
]
